@startuml

title __FACADEESTUDIANTS's Class Diagram__\n

  package projecteInicial {
    class Amplifier {
    }
  }
  

  package projecteInicial {
    class CdPlayer {
    }
  }
  

  package projecteInicial {
    class DvdPlayer {
    }
  }
  

  package projecteInicial {
    class FacadeEstudiants {
    }
  }
  

  package projecteInicial {
    class PopcornPopper {
    }
  }
  

  package projecteInicial {
    class Projector {
    }
  }
  

  package projecteInicial {
    class Screen {
    }
  }
  

  package projecteInicial {
    class TheaterLights {
    }
  }
  

  package projecteInicial {
    class Tuner {
    }
  }
  

  Amplifier o-- Tuner : tuner
  Amplifier o-- DvdPlayer : dvd
  Amplifier o-- CdPlayer : cd
  CdPlayer o-- Amplifier : amplifier
  DvdPlayer o-- Amplifier : amplifier
  Projector o-- DvdPlayer : dvdPlayer
  Tuner o-- Amplifier : amplifier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
